--- a/compose.yml
+++ b/compose.yml
@@ -1,16 +1,7 @@
-version: '3.7'
 services:
-  web:
-    build: .
-    volumes: &web-volumes
-      - &app-volume .:/app:cached
-      - public:/app/public
-    ports:
-      - 7000:7000
+  nginx:
+    image: nginx:latest
 
-volumes:
-  public:
-
-networks:
-  default:
-    name: 'default_network'
+x-uffizzi-ingress:
+  service: nginx
+  port: '2345'
